feat: add new job application field in get job for new frontend
